consul/consul-sts.yaml
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: consul
  namespace:
  labels:
    type: statefulset
spec:
  serviceName: consul
  replicas: 3
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
      - name: consul
        image: consul:latest
        ports:
        - name: rpc
          containerPort: 8300
        - name: lan
          containerPort: 8301
        - name: wan
          containerPort: 8302
        - name: http
          containerPort: 8500
        - name: dns
          containerPort: 8600
        volumeMounts:
        - name: data
          mountPath: /consul/data
          readOnly: false
        args:
        - consul
        - agent
        - -datacenter=kubernetes
        - -log-level=debug
        - -data-dir=/consul/data
        - -server
        - -client=0.0.0.0
        - -bind=0.0.0.0
        - -bootstrap-expect=3
        - -retry-join=consul-0.consul.$(POD_NAMESPACE).svc.cluster.local
        - -retry-join=consul-1.consul.$(POD_NAMESPACE).svc.cluster.local
        - -retry-join=consul-2.consul.$(POD_NAMESPACE).svc.cluster.local
        - -domain=cluster.local
        - -ui
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      #storageClassName:
