consul/consul-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: consul
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: consul.kubernetes.noverit.com
    http:
      paths:
      - path: /
        backend:
          serviceName: consul-ui
          servicePort: 8500
